--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.22.1"
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.22.1" //for back4app
+    implementation 'com.google.android.material:material:1.0.0' //for appbarlayout
+    implementation 'com.otaliastudios:zoomlayout:1.7.0' //for ZoomLayout
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
